Fix styles for search

--- a/packages/@okta/vuepress-theme-prose/assets/css/components/_top-bar.scss
+++ b/packages/@okta/vuepress-theme-prose/assets/css/components/_top-bar.scss
@@ -3,6 +3,7 @@
   background-color: cv('brand');
   padding: 0rem;
   z-index: 20;
+  border-bottom: none;
   
   &--container {
     display: block;
