--- a/packages/@okta/vuepress-theme-prose/assets/css/prose.scss
+++ b/packages/@okta/vuepress-theme-prose/assets/css/prose.scss
@@ -32,4 +32,5 @@
 @import 'components/reference';
 @import 'components/categoryLinks';
 @import 'components/quickstart';
+@import 'components/search';
 
